--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,11 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
     tags:
       - 'v*.*.*'
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 env:
   REGISTRY: ghcr.io
@@ -15,17 +15,14 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v6
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.14
       uses: actions/setup-python@v6
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.14"
         cache: 'pip'
         cache-dependency-path: 'requirements-dev.txt'
 
@@ -41,7 +38,7 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
       with:
-        file: ./coverage.xml
+        files: ./coverage.xml
         fail_ci_if_error: false
 
     - name: Check coverage threshold
@@ -57,7 +54,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
-        python-version: "3.11"
+        python-version: "3.14"
         cache: 'pip'
         cache-dependency-path: 'requirements-dev.txt'
 
@@ -75,10 +72,12 @@ jobs:
 
   # ============================================================================
   # Job 3: Build - Container image build with caching and security scanning
+  # Only builds on main branch (dev) and version tags (releases)
   # ============================================================================
   build:
     runs-on: ubuntu-latest
     needs: [test, lint]
+    if: github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
     permissions:
       contents: read
       packages: write
@@ -98,47 +97,25 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          # Branch-based tags
-          type=ref,event=branch
-          # PR tags
-          type=ref,event=pr
-          # Semantic versioning tags
+          # Dev tag for main branch
+          type=raw,value=dev,enable={{is_default_branch}}
+          # Semantic versioning tags for releases
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
           type=semver,pattern={{major}}
-          # SHA tags
-          type=sha,prefix={{branch}}-,format=short
-          # Latest tag (only on main branch)
-          type=raw,value=latest,enable={{is_default_branch}}
+          # Latest tag for version releases only
+          type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
         flavor: |
           latest=false
 
     - name: Log in to GitHub Container Registry
-      if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build Docker image (PR - no push)
-      if: github.event_name == 'pull_request'
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: ./Dockerfile
-        push: false
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        build-args: |
-          BUILD_DATE=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
-          VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-          VCS_REF=${{ github.sha }}
-
-    - name: Build and push Docker image (main/develop/tags)
-      if: github.event_name != 'pull_request'
+    - name: Build and push Docker image
       uses: docker/build-push-action@v6
       id: build-and-push
       with:
@@ -162,7 +139,6 @@ jobs:
     # ============================================================================
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
-      if: github.event_name != 'pull_request'
       with:
         image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
         format: 'sarif'
@@ -172,13 +148,11 @@ jobs:
 
     - name: Upload Trivy results to GitHub Security
       uses: github/codeql-action/upload-sarif@v4
-      if: github.event_name != 'pull_request'
       with:
         sarif_file: 'trivy-results.sarif'
 
     - name: Run Trivy vulnerability scanner (table output)
       uses: aquasecurity/trivy-action@master
-      if: github.event_name != 'pull_request'
       with:
         image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
         format: 'table'
@@ -189,11 +163,9 @@ jobs:
     # Image Signing with Cosign
     # ============================================================================
     - name: Install Cosign
-      if: github.event_name != 'pull_request'
       uses: sigstore/cosign-installer@v3
 
     - name: Sign the container image
-      if: github.event_name != 'pull_request'
       env:
         DIGEST: ${{ steps.build-and-push.outputs.digest }}
       run: |
@@ -204,7 +176,6 @@ jobs:
     # Build Summary
     # ============================================================================
     - name: Generate build summary
-      if: github.event_name != 'pull_request'
       run: |
         echo "## Container Image Published :rocket:" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
